--- a/#source/header.html
+++ b/#source/header.html
@@ -7,7 +7,7 @@
             <a href="#" target="_blank"><section class="textstyle">Price</section></a>
             <a href="#" target="_blank"><section class="textstyle">Contacts</section></a>
         </nav>
-        <a href="index.html">
+        <a href="../index.html">
             <div class="logo">    
             </div>
         </a>
