--- a/#source/main.html
+++ b/#source/main.html
@@ -1,29 +1,29 @@
 <div class="mainimage">
-    <img src="/img/section-title-line.png" class="tittleline">
+    <img src="img/section-title-line.png" class="tittleline">
     <div class="skillstext"><p>Skills</p></div>
     <div class="camicon">
-        <img src="/img/camera 1.png" alt="cam">
+        <img src="img/camera 1.png" alt="cam">
         <p>Digital photography</p>
         <p class="textbottom">High-quality photos in the studio and on the nature</p>
     </div>
     <div class="videoicon">
-        <img src="/img/video 1.png" alt="video">
+        <img src="img/video 1.png" alt="video">
         <p>Video shooting</p>
         <p class="textbottom">Capture your moments so that they always stay with you</p>
     </div>
     <div class="image">
-        <img src="/img/image.png" alt="image">
+        <img src="img/image.png" alt="image">
         <p>Retouch</p>
         <p class="textbottom">I strive to make photography surpass reality</p>
     </div>
     <div class="micicon">
-        <img src="/img/mic 1.png" alt="mic">
+        <img src="img/mic 1.png" alt="mic">
         <p>Audio</p>
         <p class="textbottom">Professional sounds recording for video, advertising, portfolio</p>
     </div>
 </div>
 <div class="mainimageSecond">
-    <img src="/img/section-title-line.png" class="tittleline">
+    <img src="img/section-title-line.png" class="tittleline">
     <div class="skillstext"><p>Portfolio</p></div>
     <form action="#">
         <button class="winterbutton">
@@ -52,7 +52,7 @@
 
     </form>
     <div class="mainimage3">
-        <img src="/img/section-title-line.png" class="tittleline">
+        <img src="img/section-title-line.png" class="tittleline">
         <div class="skillstext"><p>Video</p></div>
         <div class="imageplayer">
             <a href="#"><div class="playerbut"></div></a>
@@ -61,7 +61,7 @@
     </div>
     <div class="mainimage4">
       <form action="#">
-            <img src="/img/section-title-line.png" class="tittleline">
+            <img src="img/section-title-line.png" class="tittleline">
             <div class="skillstext"><p>Price</p></div>
                 <div class="block1">
                 <h2>Standard</h2>
